[project]
name = "cr8tor-metadata-service"
version = "0.1.0"
description = "Python FastAPI app to serve as Publish Service for CR8TOR project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.6",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.7.1",
    "pymssql>=2.3.4",
    "pymysql>=1.1.1",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.3.4",
    "ruff>=0.9.1",
]
